# Simple-Serial-Protocol

./: CMakeLists.txt  EspConnection.h  README.md  main.cpp
ArduinoDemo/: ArduinoDemo.ino
SSCP/: EspConnection.h  RaspiConnection.h  SerialConnection.h
WiFiAccessPointSerial/: WiFiAccessPointSerial.ino
sscp/: SerialConnection.h
